--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header class="v-header">
             <div class="fullscreen-video-wrap">
                 <video autoplay loop>
-                        <source src="./img/video.mp4" type="video/mp4">
-                        <source src="./img/video.webm" type="video/webm">
+                        <source src="img/VIDEO.mp4" type="video/mp4">
+                        <source src="img/VIDEO.webm" type="video/webm">
                         Your browser does not support the video tag.
                 </video>
             </div>
