--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <header class="v-header">
             <div class="fullscreen-video-wrap">
-                <video autoplay loop controls>
+                <video autoplay loop>
                         <source src="./img/video.mp4" type="video/mp4">
                         <source src="./img/video.webm" type="video/webm">
                         Your browser does not support the video tag.
