--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h1 class="animated fadeInLeft">Ayçiçeğinin</h1>
                         <p class="animated fadeInRight">altın çağı başlıyor</p>
                         <div class="btn-container animated fadeInUp">
-                            <a class="btn-yellow"">Daha fazla
+                            <a class="btn-yellow">Daha fazla
                             <span></span><span></span><span></span><span></span>
                               </a>
                         </div>
@@ -84,7 +84,7 @@
     </header>
     <!-- ABOUT US -->
     <div id="container" class="section-features">
-        <h1>HAKKIMIZDA</h1>
+        <h1 class="heading-1">HAKKIMIZDA</h1 class="heading-1">
 <div class="row">
     <div class="cardic">
         <div class="col-1-of-2">
@@ -166,13 +166,13 @@
 </div>
 <!-- Section Product -->
     <div class="section-product">
-        <h1>ÜRÜNLER</h1>
+        <h1 class="heading-1">ÜRÜNLER</h1>
             <div class="container-fluid">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
                   <div class="carousel-inner row w-100 mx-auto">
                     <div class="carousel-item col-md-4 active">
                       <div class="card">
-                        <img class="card-img-top img-fluid" src="img/product-2.jpeg" alt="Card image cap">
+                        <img class="card-img-top img-fluid" src="img/product-2.jpg" alt="Card image cap">
                       </div>
                     </div>
                     <div class="carousel-item col-md-4">
@@ -183,7 +183,7 @@
                     </div>
                     <div class="carousel-item col-md-4">
                       <div class="card">
-                        <img class="card-img-top img-fluid" src="img/product-2.jpeg" alt="Card image cap">
+                        <img class="card-img-top img-fluid" src="img/product-2.jpg" alt="Card image cap">
                       </div>
                     </div>
                     <div class="carousel-item col-md-4">
