--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="header-overlay">
                 <nav class="navbar">
-                    <img src="./img/logo.jpg" alt="GunesAy Logo">
+                    <img src="./img/logo.jpeg" alt="GunesAy Logo">
                     <ul class="navbar-links">
                         <li class="navbar-links_item portfolio-experiment">
                             <a href="#">
